force-app/main/default/objects/Payroll_Transfer_FBOS_Forecast__c/Payroll_Transfer_FBOS_Forecast__c.object-meta.xml
<CustomObject>
    <label>Payroll Transfer FBOS Forecast</label>
    <nameField>
        <displayFormat>F-{0000000}</displayFormat>
        <label>Payroll Transfer FBOS Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payroll Transfer FBOS Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>