force-app/main/default/objects/Payroll_Transfer_FBOS_Forecast__c/fields/Forecast_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Unique_Identifier__c</fullName>
    <description>This is combination of RecordType + Year + Month. This is unique in order to make sure duplicate records are not inserted</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Forecast Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>