force-app/main/default/objects/Payroll_Transfer_FBOS_Forecast__c/fields/Fourth_Week_Cap__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Week_Cap__c</fullName>
    <label>Fourth Week Cap</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>