force-app/main/default/objects/Payroll_Transfer_FBOS_Forecast__c/recordTypes/Advocate.recordType-meta.xml
<RecordType>
    <fullName>Advocate</fullName>
    <active>true</active>
    <description>For Advocates</description>
    <label>Advocate</label>
</RecordType>