force-app/main/default/objects/Payroll_Transfer_FBOS_Forecast__c/recordTypes/Facilitator.recordType-meta.xml
<RecordType>
    <fullName>Facilitator</fullName>
    <active>true</active>
    <description>For Facilitator</description>
    <label>Facilitator</label>
</RecordType>